[package]
name = "pwn"
version = "0.2.2"
authors = ["clubby789 <jamie@hill-daniel.co.uk>"]
description = "An implementation of Pwntools written in Rust."
edition = "2018"
repository = "https://github.com/clubby789/pwntools"
homepage = "https://github.com/clubby789/pwntools"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "README.md"]

[dependencies]
colored = "2.0.0"
byteorder = "1.4.3"
rustyline = "9.1.2"
crossbeam-utils = "0.8.7"
once_cell = "1.9.0"

goblin = {version = "0.5.1", optional = true, features = ["elf32", "elf64"]}
memmap = {version = "0.7.0", optional = true}

[features]
default = ["tubes", "elf"]
tubes = []
elf = ["goblin", "memmap"]
